--- a/src/presentacion/FrmPrincipalAdministrador.form
+++ b/src/presentacion/FrmPrincipalAdministrador.form
@@ -69,6 +69,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Agencia"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mniModificarAgenciaActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
