--- a/src/presentacion/FrmPrincipalAdministrador.form
+++ b/src/presentacion/FrmPrincipalAdministrador.form
@@ -26,6 +26,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Garajes"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mniAgregarGarajesActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="mniAgregarEmpleados">
               <Properties>
@@ -64,6 +67,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Garaje"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mniModificarGarajeActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="mniModificarAgencia">
               <Properties>
@@ -94,6 +100,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Garajes"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mniListaGarajesActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="mniListaReserva">
               <Properties>
@@ -157,6 +166,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Garaje"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mniEliminarGraajeActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="mniEliminarEmpleado">
               <Properties>
