--- a/src/presentacion/IfrmModificarCliente.form
+++ b/src/presentacion/IfrmModificarCliente.form
@@ -3,6 +3,8 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JInternalFrameFormInfo">
   <Properties>
     <Property name="closable" type="boolean" value="true"/>
+    <Property name="iconifiable" type="boolean" value="true"/>
+    <Property name="maximizable" type="boolean" value="true"/>
     <Property name="title" type="java.lang.String" value="Modificar Cliente"/>
   </Properties>
   <SyntheticProperties>
@@ -100,9 +102,9 @@
                       <Component id="lblCliente" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="cmbCliente" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="lblCambios" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace pref="12" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="txtNuevoNombre" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="lblNuevoNombre" alignment="3" min="-2" max="-2" attributes="0"/>
